# pcl_kinect

./: .gitignore  .gitignore.save  .gitmodules  CMakeLists.txt  README.md
procesamiento_resultado/color/: cluster1.pcd  cluster2.pcd  cluster3.pcd  cluster4.pcd  cluster5.pcd  cluster6.pcd  cluster7.pcd  cluster8.pcd  cluster9.pcd
src/: procesamiento.cpp  triangulation.cpp
src/filtros/: FiltrosCondicionales.cpp  filtroDePaso.cpp  removerNAN.cpp  removerPuntosAisladosRadio.cpp
src/io/: lectura_nube_puntos.cpp
src/propiedades/: EstimacionDeNormal.cpp  extraerIndices.cpp
src/segmentacion/: ConditionalEuclideanSegmentation.cpp  EuclideanSegmentation.cpp  PlaneModelSegmentation.cpp  cilindro.cpp  color.cpp  diference.cpp  ransac.cpp
